# biznesradar_scraper

./: .gitignore  README.md  pyproject.toml
biznesradar-scraper/: br_scraper.py
biznesradar_scraper/: br_scraper.py
biznesradar_scraper/helpers/: launch_page.py
biznesradar_scraper/lib/: logger.py
